--- a/ContosoPizzaEFCoreAndRazor.UI/appsettings.json
+++ b/ContosoPizzaEFCoreAndRazor.UI/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ContosoPizzaCS": "Server=DU\\SQLSERVER2019DEV;Database=ContosoPizzaDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "ContosoPizzaCS": "Server=DU\\SQLSERVER2019DEV;Database=ContosoPizzaDB_3;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
